syntax = "proto3";

package mizer.plans;

import "fixtures.proto";

message AddPlanRequest {
  string name = 1;
}

message RemovePlanRequest {
  string id = 1;
}

message RenamePlanRequest {
  string id = 1;
  string name = 2;
}

message MoveFixturesRequest {
  string plan_id = 1;
  int32 x = 2;
  int32 y = 3;
}

message AlignFixturesRequest {
  string plan_id = 1;
  AlignDirection direction = 2;
  uint32 groups = 3;
  uint32 row_gap = 4;
  uint32 column_gap = 5;

  enum AlignDirection {
    LEFT_TO_RIGHT = 0;
    TOP_TO_BOTTOM = 1;
  }
}

message MoveFixtureRequest {
  string plan_id = 1;
  mizer.fixtures.FixtureId fixture_id = 2;
  int32 x = 3;
  int32 y = 4;
}

message AddImageRequest {
  string plan_id = 1;
  double x = 2;
  double y = 3;
  double width = 4;
  double height = 5;
  double transparency = 6;
  bytes data = 7;
}

message MoveImageRequest {
  string plan_id = 1;
  string image_id = 2;
  double x = 3;
  double y = 4;
}

message ResizeImageRequest {
  string plan_id = 1;
  string image_id = 2;
  double width = 3;
  double height = 4;
}

message RemoveImageRequest {
  string plan_id = 1;
  string image_id = 2;
}

message Plans {
  repeated Plan plans = 1;
}

message Plan {
  string name = 1;
  repeated FixturePosition positions = 2;
  repeated PlanScreen screens = 3;
  repeated PlanImage images = 4;
}

message FixturePosition {
  mizer.fixtures.FixtureId id = 1;
  int32 x = 2;
  int32 y = 3;
  uint32 width = 4;
  uint32 height = 5;
}

message PlanScreen {
  uint32 id = 1;
  int32 x = 2;
  int32 y = 3;
  uint32 width = 4;
  uint32 height = 5;
}

message PlanImage {
  string id = 1;
  double x = 2;
  double y = 3;
  double width = 4;
  double height = 5;
  double transparency = 6;
  bytes data = 7;
}
